--- a/sites/all/themes/drupalkashmir/sass/partials/_base.scss
+++ b/sites/all/themes/drupalkashmir/sass/partials/_base.scss
@@ -1,4 +1,4 @@
-@import "icons/*.png";
+//@import "icons/*.png";
 // $icons-sprite-dimensions: true;
 
 * { @include box-sizing(border-box); }
@@ -18,7 +18,7 @@ body {
   padding: 0;
   width: 100%;
   background-color: transparent;
-  font-family: $sans-serif-primary;
+  font-family: $lato;
   line-height: 1.6;
   color: $text-color;
 }
@@ -26,7 +26,7 @@ body {
 a{
   color: $link;
   text-decoration: none;
-  font-family: $headings;
+  font-family: $lato;
   @include transition(all .5s ease-in);
   &:hover,
   &:focus,
@@ -58,9 +58,9 @@ blockquote{
 }
 .btn{
   border: none;
-  background: $brand;
+  background: $button;
   color:  $white;
-  font-family: $sub-title;
+  font-family: $lato;
   padding: .5em 1em;
   line-height: 1;
 }
