--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -599,3 +599,8 @@ header[role="banner"] {
   background: #4b4949;
   width: 100%;
 }
+
+/* line 2, ../sass/extensions/_footer.scss */
+footer[role="contentinfo"] {
+  background: #4b4949;
+}
