--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -593,9 +593,18 @@ blockquote p:first-child {
 /*--------------*\
     $1/10
 \*--------------*/
+/* line 2, ../sass/extensions/_global.scss */
+figure {
+  margin: 0;
+}
+
 /* line 1, ../sass/extensions/_header.scss */
 header[role="banner"] {
   margin: 0;
   background: #4b4949;
   width: 100%;
+}
+/* line 6, ../sass/extensions/_header.scss */
+header[role="banner"] .siteinfo {
+  padding: 0em 1em;
 }
