add style to li

--- a/sites/all/themes/drupalkashmir/sass/extensions/_footer.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_footer.scss
@@ -3,5 +3,11 @@ footer[role="contentinfo"]
   background: rgb(75, 73, 73);
   margin: 0px;
   width: 100%;
+
+
+     li
+     { display: inline-block;
+
+     }
 }
 
