--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -537,6 +537,10 @@ figure {
   margin: 0;
 }
 
+.default_title {
+  display: none;
+}
+
 header[role="banner"] {
   margin: 0;
   background: #4b4949;
