--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -541,6 +541,10 @@ figure {
   display: none;
 }
 
+#first-time {
+  display: none;
+}
+
 header[role="banner"] {
   margin: 0;
   background: #4b4949;
