remove signup line

--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -11,3 +11,13 @@ figure {
 {
   display: none;
 }
+
+#mailchimp-newsletter-drupal_kashmir_newsletter
+{
+
+  div
+   {
+    display: none;
+   }
+}
+
