changes in header

--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -3,11 +3,13 @@ figure {
 	margin: 0;
 }
 
-.default_title{
-   display: none;
+.default_title {
+	display: none;
 }
 
-#first-time
-{
-  display: none;
+#first-time {
+	display: none;
+}
+.header-region {
+	nav, .div { width: auto; }
 }
