changes in header

--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -653,7 +653,7 @@ figure {
   display: none;
 }
 
-.header-region nav, .header-region .div {
+.header-region nav, .header-region div {
   width: auto;
 }
 
