--- a/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
@@ -6,6 +6,7 @@ header[role="banner"] {
 
 	.siteinfo {
 		@extend .animated;
+		-webkit-animation:  bounceInDown 1s 1;
 		padding: 0em 1em;
 
 		img {
@@ -27,6 +28,6 @@ header[role="banner"] {
 	}
 
 	[role="search"] {
-		
+
 	}
 }
