--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -14,7 +14,7 @@ figure {
 	nav, div { width: auto; }
 }
 
-#mailchimp-newsletter-drupal_kashmir_newsletter
+.mailchimp-newsletter-wrapper
 {
 
   div
