--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -14,4 +14,14 @@ figure {
 	nav, div { width: auto; }
 }
 
+#mailchimp-newsletter-drupal_kashmir_newsletter{
+  div
+  {
+    display: none;
+  }
+}
+
+.form-required{
+  display: block;
+}
 
