--- a/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
@@ -3,6 +3,9 @@ header[role="banner"] {
 	background: rgb(75, 73, 73);
 	width: 100%;
 	height: 4.2em;
+	-moz-box-shadow: 10px 10px 5px #888;
+	-webkit-box-shadow: 10px 10px 5px #888;
+	box-shadow: 10px 10px 5px #888;
 
 	.siteinfo {
 		@extend .animated;
