--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -669,6 +669,9 @@ header[role="banner"] {
   background: #4b4949;
   width: 100%;
   height: 4.2em;
+  -moz-box-shadow: 10px 10px 5px #888;
+  -webkit-box-shadow: 10px 10px 5px #888;
+  box-shadow: 10px 10px 5px #888;
 }
 header[role="banner"] .siteinfo {
   -webkit-animation: bounceInDown 1s 1;
