nullfying some mothership themes css

--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -25,5 +25,12 @@ figure {
   }
 }
 
+//Page mothership theme nullification
+.page {
+  background: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
 
 
