--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -704,6 +704,7 @@ footer[role="contentinfo"] {
   background: #4b4949;
   margin: 0px;
   width: 100%;
+  position: relative;
 }
 footer[role="contentinfo"] li {
   display: inline-block;
@@ -711,4 +712,5 @@ footer[role="contentinfo"] li {
 footer[role="contentinfo"] p {
   float: left;
   padding: 0.5em 0em 0em 1em;
+  position: absolute;
 }
