--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -671,6 +671,10 @@ figure {
 }
 
 header[role="banner"] {
+  border-bottom: none;
+}
+
+header[role="banner"] {
   margin: 0;
   background: #4b4949;
   width: 100%;
