--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -670,6 +670,10 @@ figure {
   margin: 0;
 }
 
+#block-views-other-communities-block {
+  width: 33%;
+}
+
 header[role="banner"] {
   margin: 0;
   background: #4b4949;
