--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -703,6 +703,9 @@ header[role="banner"] .siteinfo img {
 .header-region [role="search"] {
   padding: 0em 1em;
 }
+.header-region [role="search"] input[type="text"] {
+  width: 50%;
+}
 
 footer[role="contentinfo"] {
   background: #4b4949;
