--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -670,12 +670,16 @@ figure {
   margin: 0;
 }
 
+header[role="banner"] {
+  border-bottom: none;
+}
+
 #block-views-other-communities-block {
   width: 33%;
 }
 
-header[role="banner"] {
-  border-bottom: none;
+#block-mailchimp-lists-drupal-kashmir-newsletter {
+  width: 33%;
 }
 
 header[role="banner"] {
