--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -45,10 +45,12 @@ border-bottom: none;
 #block-views-other-communities-block
 {
   width: 33%;
+  float: left;
 }
 
 #block-mailchimp-lists-drupal-kashmir-newsletter{
   width: 33%;
+  float: right;
 }
 
 
