--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -1,4 +1,10 @@
 //  Nullfication of some  mothership theme styles
+.page {
+  width: 100%;
+}
+#main-content {
+  padding: 0;
+}
 figure {
 	margin: 0;
 }
@@ -51,6 +57,10 @@ border-bottom: none;
 #block-mailchimp-lists-drupal-kashmir-newsletter{
   width: 33%;
   float: right;
+}
+//Homepage banner
+#views_slideshow_cycle_teaser_section_home_slideshow-block, #views_slideshow_cycle_div_home_slideshow-block_0 {
+  width: 100%;
 }
 
 
