--- a/sites/all/themes/drupalkashmir/sass/partials/_fonts.scss
+++ b/sites/all/themes/drupalkashmir/sass/partials/_fonts.scss
@@ -19,7 +19,8 @@ $white: #ffffff;
 $black: #000000;
 $text-color: #000000;
 $link: rgb(16, 165, 235);
-$button: #ED5D3B;
+$grey: rgb(75, 73, 73);
+$brand: rgb(24, 190, 255);
 
 // FONT COLOR
 
