--- a/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
@@ -1,6 +1,6 @@
 header[role="banner"] {
 	margin: 0;
-	background: rgb(75, 73, 73);
+	background: $grey;
 	width: 100%;
 	height: 4.2em;
 	-moz-box-shadow: 0px 5px 5px #888;
@@ -34,7 +34,7 @@ header[role="banner"] {
 		padding: 0em 1em;
 
 		input[type="text"] {
-			border: 1px solid rgb(24, 190, 255);
+			border: 1px solid $brand;
 			background: #CECECE;
 			padding: 5px;
 			border-radius: 20px;
@@ -44,7 +44,7 @@ header[role="banner"] {
 			padding: 8px;
 			border: 0;
 			border-radius: 20px;
-			background: rgb(24, 190, 255);
+			background: $brand;
 			text-transform: uppercase;
 			font-size: 14px;
 			font-weight: 700;
