--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -84,7 +84,7 @@ border-bottom: none;
         background: $brand;
         padding: 5px;
         border-radius: 20px 0px 0px 20px;
-
+        z-index: 10;
       }
     }
   }
