--- a/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
@@ -1,4 +1,5 @@
 header[role="banner"] {
+	position: relative;
 	margin: 0;
 	background: $grey;
 	width: 100%;
@@ -8,6 +9,7 @@ header[role="banner"] {
 	box-shadow: 0px 5px 5px #888;
 
 	.siteinfo {
+		position: absolute;
 		@extend .animated;
 		-webkit-animation:  bounceInDown 1s 1;
 		padding: 0em 1em;
