--- a/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
@@ -7,6 +7,7 @@ header[role="banner"] {
 	-moz-box-shadow: 0px 5px 5px #888;
 	-webkit-box-shadow: 0px 5px 5px #888;
 	box-shadow: 0px 5px 5px #888;
+	z-index: 4;
 
 	.siteinfo {
 		position: absolute;
