--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -572,7 +572,7 @@ blockquote p:first-child {
   float: right;
 }
 
-.f-left, .header-region #block-system-main-menu {
+.f-left, .header-region #block-system-main-menu, .header-region #block-system-main-menu .menu li {
   float: left;
 }
 
@@ -744,6 +744,9 @@ header[role="banner"] .siteinfo img {
   font-size: 1.2em;
   font-weight: 700;
   margin-top: 0.9em;
+}
+.header-region #block-system-main-menu .menu li {
+  list-style: none;
 }
 .header-region .active {
   color: white;
