changes in search bar

--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -1,5 +1,5 @@
 //  Nullfication of some  mothership theme styles
-.page {
+/**.page {
   width: 100%;
 }
 div[role="main"] {
@@ -62,7 +62,7 @@ border-bottom: none;
 #views_slideshow_cycle_teaser_section_home_slideshow-block, #views_slideshow_cycle_div_home_slideshow-block_0 {
   width: 100%;
 }
-
+*/
 
 //FRONT PAGE 
 .front {
