--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -631,7 +631,7 @@ blockquote p:first-child {
 /*--------------*\
     $1/10
 \*--------------*/
-.front .page #main-content .default-title {
+.front .page #main-content .default_title {
   display: none;
 }
 
