--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -695,6 +695,7 @@ header[role="banner"] .siteinfo img {
   position: relative;
 }
 .header-region [role="search"] input[type="text"] {
+  margin-top: -1em;
   border: 1px solid #18beff;
   background: #CECECE;
   padding: 5px;
@@ -702,6 +703,7 @@ header[role="banner"] .siteinfo img {
 }
 .header-region [role="search"] input[type="submit"] {
   padding: 8px;
+  margin-top: -1.5em;
   border: 0;
   border-radius: 20px;
   background: #18beff;
