--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -37,6 +37,17 @@
       position: absolute;
       bottom: 0;
       padding: 4em;
+
+      .field-content {
+        width: 30%;
+        background: $black;
+        color: $white;
+        height: 8.5em;
+        padding: 0.3em 1em;
+        overflow: hidden;
+        border-radius: 1em;
+        text-align: center;
+      }
     }
   }
 }
