--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -658,6 +658,16 @@ blockquote p:first-child {
   bottom: 0;
   padding: 4em;
 }
+.front .views-slideshow-cycle-main-frame-row-item .views-field-field-slide-text .field-content {
+  width: 30%;
+  background: black;
+  color: white;
+  height: 8.5em;
+  padding: 0.3em 1em;
+  overflow: hidden;
+  border-radius: 1em;
+  text-align: center;
+}
 
 header[role="banner"] {
   position: relative;
