--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -1,10 +1,9 @@
-.front {
-  .page {
-    [role="main"] {
-      h1 {
-        display: none;
+//Default page titles
+.page {
+  [role="main"] {
+    h1 {
+      display: none;
       }
-    }
   }
 }
 
