--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -631,7 +631,7 @@ blockquote p:first-child {
 /*--------------*\
     $1/10
 \*--------------*/
-.front .page [role="main"] h1 {
+.page [role="main"] h1 {
   display: none;
 }
 
