--- a/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
@@ -58,10 +58,10 @@ header[role="banner"] {
 		}
 		input[type="submit"] {
 			@extend .btn;
-			//padding: 8px;
+			padding: 8px;
 			margin-top: -1.2em;
 			//border: 0;
-			//border-radius: 20px;
+			border-radius: 20px;
 			//background: $brand;
 			//text-transform: uppercase;
 			//font-size: 14px;
