--- a/sites/all/themes/drupalkashmir/sass/partials/_base.scss
+++ b/sites/all/themes/drupalkashmir/sass/partials/_base.scss
@@ -146,13 +146,13 @@ blockquote{
 }
 //button css
 .btn {
-  //display: inline-block;
- // *display: inline;
-  //padding: 4px 12px;
-  //margin-bottom: 0;
-  //*margin-left: .3em;
-  //font-size: 14px;
-  //line-height: 20px;
+  display: inline-block;
+  *display: inline;
+  padding: 4px 12px;
+  margin-bottom: 0;
+  *margin-left: .3em;
+  font-size: 14px;
+  line-height: 20px;
   color: #333333;
   text-align: center;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
