--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -41,4 +41,15 @@
       }
     }
   }
+  #block-mailchimp-lists-drupal-kashmir-newsletter  {
+    position: absolute;
+    bottom: 0;
+    z-index: 3;
+    right: 0;
+    margin-right: 4em; 
+
+    h2 {
+      display: none;
+    }
+  }
 }
