--- a/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_header.scss
@@ -57,18 +57,17 @@ header[role="banner"] {
 			border-radius: 20px;
 		}
 		input[type="submit"] {
-			@extend .btn;
 			padding: 8px;
 			margin-top: -1.2em;
-			//border: 0;
+			border: 0;
 			border-radius: 20px;
-			//background: $brand;
-			//text-transform: uppercase;
-			//font-size: 14px;
-			//font-weight: 700;
-			//color: white;
-			//position: absolute;
-			//right: 0;
+			background: $brand;
+			text-transform: uppercase;
+			font-size: 14px;
+			font-weight: 700;
+			color: white;
+			position: absolute;
+			right: 0;
 		}
 	}
 }
