--- a/sites/all/themes/drupalkashmir/stylesheets/screen.css
+++ b/sites/all/themes/drupalkashmir/stylesheets/screen.css
@@ -700,6 +700,14 @@ blockquote p:first-child {
 .front #block-mailchimp-lists-drupal-kashmir-newsletter h2 {
   display: none;
 }
+.front .block-block-7 h2 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: bold;
+  border-bottom: 1px solid #cecece;
+  margin: 0em 1em;
+}
 
 header[role="banner"] {
   position: relative;
