--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -48,7 +48,7 @@
     }
   }
   .block-block-7 {
-    h2 {
+    .title {
       text-align: center;
       text-transform: uppercase;
       font-size: 1.5em;
