--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -47,7 +47,7 @@
       display: none;
     }
   }
-  .block-block-7 {
+  #block-block-7 {
     .title {
       text-align: center;
       text-transform: uppercase;
