--- a/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
+++ b/sites/all/themes/drupalkashmir/sass/extensions/_global.scss
@@ -56,5 +56,12 @@
       border-bottom: 1px solid #cecece;
       margin:  0em 1em;
     }
+    ul {
+      margin: 0em 2em;
+      li {
+        @extend .f-left;
+        width: 33%;
+      }
+    }
   }
 }
