--- a/sites/all/themes/drupalkashmir/sass/partials/_typography.scss
+++ b/sites/all/themes/drupalkashmir/sass/partials/_typography.scss
@@ -65,5 +65,5 @@ h6,
 /*--------------*\
   $TYPEFACE
 \*--------------*/
-$sans-serif: "proxima-nova", sans-serif;
+$sans-serif: "lato", sans-serif;
 $serif: "rooney-web", serif;
