--- a/sites/all/themes/drupalkashmir/sass/sections/_header.scss
+++ b/sites/all/themes/drupalkashmir/sass/sections/_header.scss
@@ -7,15 +7,16 @@ header[role="banner"] {
     @include background(linear-gradient(#F8756A, #CC2317));
     @include box-shadow(inset 0 1px 0 rgba(white, 0.36));
     position: relative;
-    height: 42px;   
+    height: 43px;   
     border-top: 1px solid #F8756A;
+    z-index: 9;
 }
 
 .navbar__logo {
     @extend %one-half;
     @extend %f-left;
     position: absolute;
-    opacity: .85;
+    opacity: .95;
 }
 
 .navbar__menu--button {
